--- a/public/gallery.html
+++ b/public/gallery.html
@@ -18,6 +18,61 @@
       </nav>
     </header>
 
+    <!-- Search and Filter -->
+    <div class="bg-white rounded-lg shadow-md p-4 mb-6">
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+        <!-- Search Input -->
+        <div>
+          <label for="searchInput" class="block text-sm font-medium text-gray-700 mb-1">
+            検索
+          </label>
+          <input
+            type="text"
+            id="searchInput"
+            placeholder="バッチタイトルで検索..."
+            class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+          />
+        </div>
+
+        <!-- Date From -->
+        <div>
+          <label for="dateFrom" class="block text-sm font-medium text-gray-700 mb-1">
+            開始日
+          </label>
+          <input
+            type="date"
+            id="dateFrom"
+            class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+          />
+        </div>
+
+        <!-- Date To -->
+        <div>
+          <label for="dateTo" class="block text-sm font-medium text-gray-700 mb-1">
+            終了日
+          </label>
+          <input
+            type="date"
+            id="dateTo"
+            class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+          />
+        </div>
+      </div>
+
+      <!-- Filter Actions -->
+      <div class="mt-4 flex justify-between items-center">
+        <div class="text-sm text-gray-600">
+          <span id="resultCount">-</span> 件のバッチ
+        </div>
+        <button
+          id="clearFilters"
+          class="px-4 py-2 text-sm text-gray-600 hover:text-gray-800 hover:bg-gray-100 rounded-md transition-colors"
+        >
+          フィルタをクリア
+        </button>
+      </div>
+    </div>
+
     <!-- Loading -->
     <div id="loading" class="text-center py-12">
       <svg class="animate-spin h-8 w-8 text-blue-600 mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
