--- a/public/gallery.html
+++ b/public/gallery.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>imgstk - バッチ一覧</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
 </head>
 <body class="bg-gray-100 min-h-screen">
   <div class="container mx-auto px-4 py-8 max-w-6xl">
@@ -70,6 +71,51 @@
         >
           フィルタをクリア
         </button>
+      </div>
+    </div>
+
+    <!-- Selection Toolbar -->
+    <div id="selectionToolbar" class="hidden bg-blue-50 border border-blue-200 rounded-lg shadow-md p-4 mb-6">
+      <div class="flex flex-col md:flex-row justify-between items-center gap-4">
+        <div class="text-blue-800 font-medium">
+          <span id="selectedCount">0</span> 枚の画像を選択中
+        </div>
+        <div class="flex gap-2">
+          <button
+            id="downloadSelected"
+            class="px-4 py-2 bg-green-600 text-white rounded-md hover:bg-green-700 transition-colors flex items-center gap-2"
+          >
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path>
+            </svg>
+            ZIPダウンロード
+          </button>
+          <button
+            id="deleteSelected"
+            class="px-4 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 transition-colors flex items-center gap-2"
+          >
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path>
+            </svg>
+            一括削除
+          </button>
+          <button
+            id="clearSelection"
+            class="px-4 py-2 bg-gray-300 text-gray-700 rounded-md hover:bg-gray-400 transition-colors"
+          >
+            選択解除
+          </button>
+        </div>
+      </div>
+      <!-- Progress Bar for ZIP download -->
+      <div id="zipProgress" class="hidden mt-4">
+        <div class="flex justify-between text-sm text-gray-600 mb-1">
+          <span id="zipProgressText">準備中...</span>
+          <span id="zipProgressPercent">0%</span>
+        </div>
+        <div class="w-full bg-gray-200 rounded-full h-2">
+          <div id="zipProgressBar" class="bg-green-600 h-2 rounded-full transition-all" style="width: 0%"></div>
+        </div>
       </div>
     </div>
 
